# hv-simulator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  justfile  pyproject.toml
.claude/skills/atv-add-ship/: SKILL.md
.claude/skills/expand-galaxy/: SKILL.md
.claude/skills/honorverse-ship-scribe/: SKILL.md
.claude/skills/honorverse-ship-scribe/scripts/: fetch_wikitext.py  list_category.py
.claude/skills/honorverse-system-scribe/: SKILL.md
.claude/skills/honorverse-system-scribe/scripts/: fetch_wikitext.py
.claude/skills/honorverse-wormhole-scribe/: SKILL.md
.claude/skills/honorverse-wormhole-scribe/scripts/: fetch_wikitext.py  list_category.py
.github/ISSUE_TEMPLATE/: atv-ship-request.yml
contracts/: engine-openapi.yaml  validate.py
contracts/universe-artifact/: README.md  schema.sql
data/: ATTRIBUTION.md  LICENSE  README.md  transponder-codes.json
data/hyperspace/: hyperspace.json
data/nations/: all-the-vibes.json  andermani-empire.json  protectorate-of-grayson.json  republic-of-beowulf.json  republic-of-erewhon.json  republic-of-haven.json  solarian-league.json  star-kingdom-of-manticore.json
data/planning/: 001-gateway-systems.md  002-crucial-data-points.md  003-readiness-assessment.md  README.md
data/schema/: hyperspace.schema.json  ship-class.schema.json  ship.schema.json  star-system.schema.json  wormhole.schema.json
data/ships/: ship-classes.json  ships.json
data/systems/: all-the-vibes-system.json  basilisk-system.json  durandel-system.json  endicott-system.json  erewhon-system.json  gregor-system.json  haven-system.json  manticore-system.json  new-berlin-system.json  sigma-draconis-system.json  trevors-star-system.json  yeltsins-star-system.json
data/wormholes/: wormhole-network.json
deploy/: compose.yaml  fleet.sh  queue-board.sh  seed.sh
docs/: galaxy-changelog.md  terminology.md
engine/: Dockerfile  README.md  pyproject.toml
engine/src/hvsim/api/: __init__.py  app.py  db.py  metrics.py  schemas.py  units.py
engine/src/hvsim/api/static/: index.html
engine/src/hvsim/clock/: __init__.py  clock.py
engine/src/hvsim/des/: __init__.py  core.py  event.py  model.py  segment.py
engine/src/hvsim/ephemeris/: cli.py  elements.py
engine/src/hvsim/flightplan/: __init__.py  plan.py  ship.py
engine/src/hvsim/kinematics/: __init__.py  constants.py  profile.py  trajectory.py  vector.py
engine/src/hvsim/queue/: __init__.py  cli.py
engine/src/hvsim/route/: __init__.py  cli.py  find.py  plan.py
engine/src/hvsim/universe/: __init__.py
engine/tests/: test_api.py  test_des.py  test_fleet_api.py  test_queue.py  test_route.py  test_smoke.py  test_transponder.py  test_universe.py
grafana/: DEPLOY.md  ship-status.json
planning/: 001-initial-idea-discussion.md  002-discussion-continued.md  003-discussion-continued.md  004-project-plan.md  005-honorverse-data-review.md  006-galaxy-architecture-brainstorm.md  007-ui-vision.md
sprints/: 001-bootstrap.md  002-ephemeris.md  003-trajectory.md  004-flightplan.md  005-api.md  006-sol-map-widget.md  007-deploy-kubsdb.md  008-metrics-grafana.md  009-phase2-contracts.md  010-universe-foundation.md  011-complete-phase2a.md  012-expand-galaxy.md  013-des-core.md  014-inter-system-travel.md  015-hyperspace-band-model.md  016-nav-planner.md  017-transponder-identity.md  018-galaxy-api-deploy.md  019-wormhole-queues.md  020-junction-queue-endpoint.md  021-ui-foundation-galaxy-graph.md  022-system-zoom.md  023-live-ships-fleet-board.md  024-junction-queue-panels.md  025-polish-time-controls.md  026-plan-endpoint.md  027-flight-planner-ui.md  028-map-fidelity.md  029-map-polish.md  030-living-galaxy.md  031-demo-polish.md  032-board-filter-at-planet-labels.md  034-atv-ship-intake.md  035-repeating-routes.md  036-dashboard-pass.md  README.md
src/hvsim/: __init__.py
src/hvsim/api/: __init__.py  app.py  db.py  serialize.py
src/hvsim/clock/: __init__.py  clock.py
src/hvsim/ephemeris/: __init__.py  bodies.py  cli.py  elements.py  kepler.py
src/hvsim/flightplan/: __init__.py  plan.py  ship.py
src/hvsim/kinematics/: __init__.py  profile.py
tests/: test_api.py  test_ephemeris.py  test_flightplan.py  test_kinematics.py
tools/: README.md  galaxy-summary.py  shakedown.py  validate-data.py
tools/coordinate-frame/: pyproject.toml  test_frame.py
tools/coordinate-frame/coordinate_frame/: __init__.py
tools/nav-planner/: pyproject.toml  test_nav_planner.py
tools/nav-planner/nav_planner/: __init__.py
tools/orbit-derive/: pyproject.toml  test_derive.py
tools/orbit-derive/orbit_derive/: __init__.py
tools/universe-compiler/: pyproject.toml  test_compile.py
tools/universe-compiler/universe_compiler/: __init__.py
ui/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css  app.html
ui/src/lib/: AtAGlance.svelte  DataPanel.svelte  FleetBoard.svelte  FlightPlanner.svelte  GalaxyMap.svelte  HelpOverlay.svelte  JunctionQueuePanel.svelte  LayersPanel.svelte  Legend.svelte  PlanetShipsPanel.svelte  ShipTimeline.svelte  SystemMap.svelte  TimeScrubber.svelte  api.ts  atbody.test.ts  atbody.ts  board.test.ts  board.ts  camera.test.ts  camera.ts  detail.ts  factions.test.ts  factions.ts  format.test.ts  format.ts  keymap.ts  layers.ts  live.test.ts  live.ts  nation.test.ts  nation.ts  overlays.test.ts  overlays.ts  phase.test.ts  phase.ts  planner.test.ts  planner.ts  scalebar.test.ts  scalebar.ts  scene.test.ts  (+5 more)
ui/src/routes/: +layout.ts  +page.svelte
