[project]
name = "hvsim"
version = "0.1.0"
description = "Honorverse ship-travel simulator — realistic in-universe flight times in real time"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
where-is = "hvsim.ephemeris.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hvsim"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic default set: pyflakes, pycodestyle, isort, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
