[project]
name = "hvsim"
version = "0.1.0"
description = "Honorverse ship-travel simulator — realistic in-universe flight times in real time"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
where-is = "hvsim.ephemeris.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hvsim"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic default set: pyflakes, pycodestyle, isort, pyupgrade, bugbear.
# RUF001/002/003 flag ambiguous Unicode confusables (e.g. U+2212 "−" vs ASCII
# "-") in strings/docstrings/comments — keep source ASCII-confusable-free.
select = ["E", "F", "I", "UP", "B", "RUF001", "RUF002", "RUF003"]
# Permit the typographic dashes we use intentionally (en dash in ranges, em dash
# in prose). U+2212 MINUS stays forbidden — it is confusable with ASCII "-".
allowed-confusables = ["–", "—"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
