[project]
name = "hvsim-coordinate-frame"
version = "0.1.0"
description = "Fabricate a Sol-origin galactic coordinate frame for Honorverse systems"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hvsim-frame = "coordinate_frame:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coordinate_frame"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
