[project]
name = "hvsim-orbit-derive"
version = "0.1.0"
description = "Fill first-pass (fabricated) Keplerian orbits for Honorverse system bodies"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hvsim-derive-orbits = "orbit_derive:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orbit_derive"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
